--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+mscoco/
+coco_info
+X-LAN-models-results
+data/
+experiments/xlan
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -137,4 +142,3 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-mscoco/
